--- a/SimpleSelfCam/res/values/strings.xml
+++ b/SimpleSelfCam/res/values/strings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, SimpleSelfCamActivity!</string>
-    <string name="app_name">SimpleSelfCam</string>
+    <string name="app_name">Mirror</string>
     <string name="capture">Capture!</string>
 
 </resources>
